9anime Theme/Theme.css
/* "9anime Adaption" by Valerio Lyndon / Revision 0.7 */

@\import "https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap";

/* BASE */

html {
	height: 100%;
}
html, body {
	color: #b4b4b4;
	font: 13px/1.42857 Roboto, sans-serif;
}
body {
	position: relative;
	
	background: #16151c none center center / cover;
	background-color: #16151c !important;
	background-attachment: fixed !important;
	min-width: 1160px;
	min-height: 100%;
	padding-bottom: 127.281px;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
td {
	line-height: 1.42857;
}
a {
	text-decoration: none !important;
}
*, :active, :focus, :hover {
	outline: 0 !important;
}

/* Remove Tutorial/Notices */
.initialize-tutorial { display: none !important; }

.list-container {
	position: static;
	
	width: 1140px;
	padding: 0 10px;
	background: none !important;
	border: none;
}

.list-block {
	min-height: 500px;
	margin-top: 40px !important;
}

.list-unit {
	width: 100%;
}

.list-table {
	border: none !important;
}

/* OPTIMIZATIONS */

[data-owner="1"] .btn-menu,
[style*="block"] ~ div .btn-menu,
[style*="block"] ~ div .header-info,
#header-menu-button,
#header-menu-dropdown svg,
#header-menu-dropdown a .text,
.list-menu-float > *,
.list-menu-float .icon-menu svg,
.list-table-header .header-title.image,
.data.status,
.icon-watch,
[class^="icon-watch"],
.notes,
#fancybox-outer > .fancy-bg,
#advanced-options .advanced-options-header .description
{ display: none !important; }

/* OPTIMIZATIONS - General Transitions */

.btn-menu a, .header-info a,
#header-menu-dropdown a,
#header-menu-dropdown a:after,
.list-menu-float:before,
.list-menu-float:after,
.list-table .list-table-header .header-title .link.sort,
.list-item a,
.data.title .link,
.add-edit-more,
.content-status, .rewatching, .rereading,
#advanced-options #fancybox-close,
#advanced-options .advanced-options-button a
{
	-webkit-transition: all .1s ease-in-out 0s;
	-khtml-transition: all .1s ease-in-out 0s;
	-moz-transition: all .1s ease-in-out 0s;
	-ms-transition: all .1s ease-in-out 0s;
	-o-transition: all .1s ease-in-out 0s;
	transition: all .1s ease-in-out 0s;
}

/* OPTIMIZATIONS - List Item Transitions */

.list-table-data:after,
.data:not(.title),
.more-info[style*="tab"]
{
	-webkit-transition: all .15s ease-out 0s;
	-khtml-transition: all .15s ease-out 0s;
	-moz-transition: all .15s ease-out 0s;
	-ms-transition: all .15s ease-out 0s;
	-o-transition: all .15s ease-out 0s;
	transition: all .15s ease-out 0s;
}

.list-item:hover .list-table-data:after,
.list-item:hover .data:not(.title),
.list-item:hover .more-info[style*="tab"]
{
	-webkit-transition: all .35s ease-out 0s;
	-khtml-transition: all .35s ease-out 0s;
	-moz-transition: all .35s ease-out 0s;
	-ms-transition: all .35s ease-out 0s;
	-o-transition: all .35s ease-out 0s;
	transition: all .35s ease-out 0s;
}

/* OPTIMIZATIONS - Buttons */

.list-menu-float:before,
.list-table-header .header-title a,
#advanced-options .advanced-options-button a
{
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	touch-action: manipulation;
}

/* OPTIMIZATIONS - Buttons Active */

.list-menu-float:before:active,
.list-table-header .header-title a:active
{
	-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
	box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
}

/* HEADER - Logo & More */

.header {
	display: block;
	width: 100%;
	min-width: 1160px;
	height: 55px;
	padding-top: 20px;
	background: #0b0a0d;
	
	z-index: 250 !important;
}

.header .header-title {
	top: 20px;
	left: 50%;
	
	width: 340px;
	height: 23px;
	background: url(https://i.imgur.com/m5565uZ.png);
	margin-left: -163.5px;
	
	overflow: visible;
	
	font-size: 0;
	text-indent: 0;
}
.anime .header .header-title:after { content: "Discover and discuss high quality anime online"; letter-spacing: .142rem }
.manga .header .header-title:after { content: "Discover and discuss high quality manga online"; letter-spacing: .133rem }
.header .header-title:after {
	display: block;
	padding-top: 28px;
	
	color: #64377a;
	font-size: .78rem;
	font-weight: normal;
	text-align: center;
	text-transform: uppercase;
	white-space: nowrap;
}

.header-menu {
	position: relative !important;
	top: 0 !important;
	left: 0;
	right: auto !important;
	
	width: 1160px;
	height: 55px;
	margin: 0 auto;
}
.btn-menu, .header-info {
	position: absolute;
	left: 10px;
	
	width: 1110px;
	border-radius: 2px;
	margin: 0 !important;
	
	color: #b4b4b4 !important;
	font-size: 1.2rem !important;
	font-weight: 400;
	text-align: left !important;
}
.btn-menu a, .header-info a {
	color: #b4b4b4 !important;
}
.btn-menu a:hover, .header-info a:hover { 
	color: #723f8c !important;
}
.btn-menu {
	top: 160px;
	
	height: 20px;
	padding: 18px 15px 40.2857px;
	background: #51286a;
	
	font-size: 1.4rem !important;
	line-height: 1.1;
	font-weight: 500;
}
.btn-menu:after { content: "List"; }
.btn-menu a { font-weight: 500 !important; }
.header-info {
	top: 201px;
	
	height: 22.2857px;
	padding: 0 15px 15px;
}
.header-info a { font-weight: 400 !important; }

/* HEADER - List Toggle */

#header-menu-dropdown {
	top: 0;
	left: 10px;
	right: auto !important;
	
	display: block !important;
	width: 0;
	height: 0;
	border: none;
	
	box-shadow: none !important;
}
#header-menu-dropdown a {
	position: relative;
	
	width: 91px;
	height: 30px;
	padding: 5px 20px 5px 15px;
	background: #51286a;
	border-radius: 2px;
	
	color: #b4b4b4;
	font-weight: normal;
	white-space: nowrap;
	
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	overflow: hidden;
	transition: all .1s ease-in-out;
}
.anime #header-menu-dropdown a, .manga #header-menu-dropdown a:hover { background: #51286a; }
.manga #header-menu-dropdown a, .anime #header-menu-dropdown a:hover { background: #363242; }
#header-menu-dropdown a:hover { color: #dadada; }
.anime #header-menu-dropdown a:before, .manga #header-menu-dropdown a:hover:before {
	content: "Anime";
	font-size: 12px;
	line-height: 20px;
}
/* ... */

